Fix querying bugs